# stlcg.rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.devcontainer/: .bash_pretty  Dockerfile  cas.pem  devcontainer.json
.github/workflows/: ci.yml
examples/: basic.rs
src/: env.rs  error.rs  expr.rs  formula.rs  interval.rs  lib.rs  ops.rs  options.rs
tests/: core.rs  upstream_golden.rs
tests/fixtures/: generate_upstream.py  upstream_stlcg.json
