[package]
name = "stlcg"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
license = "MIT"
description = "Signal Temporal Logic robustness evaluation with Burn tensors."

[dependencies]
burn = { version = "0.21.0-pre.5", default-features = false, features = ["std", "autodiff", "flex"] }
thiserror = "2"

[dev-dependencies]
approx = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
